--- a/portfolio-app/src/index.css
+++ b/portfolio-app/src/index.css
@@ -1,13 +1,37 @@
+/* Importing the Quicksand font thought the Google Font API */
+@import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,600;1,900&family=Quicksand:wght@400;700&display=swap');
+
+:root {
+  --glassy-gradient: radial-gradient(at bottom right, #b5e0ddff 0%, #cfccccff 50%, #daddd4ff 75%, #cee2b5ff 100%);
+}
+
+* {
+  color: #2c2c2c;
+  font-family: 'Quicksand', Helvetica, Arial, sans-serif;
+}
+
 body {
+  background: var(--glassy-gradient);
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+}
+
+main {
+  box-sizing: border-box;
+  width: 80%;
+  min-height: 50vh;
+  margin: 0 auto;
+  padding: 1% 3%;
+  box-shadow: 0px 4px 8px 0px #85858567;
+  background-color: #fff;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1, h2, h3 {
+  font-kerning: none;
+  font-weight: 400;
 }
