Misc styling/structure changes

--- a/portfolio-app/src/index.css
+++ b/portfolio-app/src/index.css
@@ -1,24 +1,28 @@
 /* Importing the Quicksand font thought the Google Font API */
 @import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,600;1,900&family=Quicksand:wght@400;700&display=swap');
 
-:root {
+:root 
+{
   --glassy-gradient: radial-gradient(at bottom right, #b5e0ddff 0%, #cfccccff 50%, #daddd4ff 75%, #cee2b5ff 100%);
   --standard-box-shadow: 0px 4px 8px 0px #85858567;
   --dark-gray: #2c2c2c;
 }
 
-* {
+* 
+{
   color: var(--dark-gray);
   font-family: 'Quicksand', Helvetica, Arial, sans-serif;
 }
 
-body {
+body 
+{
   background: var(--glassy-gradient);
   margin: 0;
   min-height: 100vh;
 }
 
-main {
+main 
+{
   box-sizing: border-box;
   width: 80%;
   min-height: fit-content;
@@ -28,7 +32,17 @@ main {
   background-color: #fff;
 }
 
-h1, h2, h3 {
+section h2 
+{
+  background: var(--glassy-gradient);
+  border-radius: 2px;
+  margin: 1vh 0 10px 0;
+  padding: 10px;
+  width: fit-content;
+}
+
+h1, h2, h3 
+{
   font-kerning: none;
   font-weight: 400;
 }
