--- a/portfolio-app/src/index.css
+++ b/portfolio-app/src/index.css
@@ -36,7 +36,7 @@ section h2
 {
   background: var(--glassy-gradient);
   border-radius: 2px;
-  margin: 1vh 0 10px 0;
+  margin: 1vh auto 10px auto;
   padding: 10px;
   width: fit-content;
 }
@@ -45,4 +45,26 @@ h1, h2, h3
 {
   font-kerning: none;
   font-weight: 400;
+}
+
+@media screen and (max-width: 768px)
+{
+  header { min-width: fit-content }
+
+  main 
+  {
+      width: 100%;
+      margin: 0;
+  }
+
+  .portfolio_piece 
+  {
+      flex: 1 0 20%;
+
+      width: fit-content;
+      margin: 1%;
+      padding-bottom: 10px;
+  }
+
+  button { width: 100% }
 }
